--- a/org/main.org
+++ b/org/main.org
@@ -3,7 +3,7 @@
 #+email:     chilkuri@chilkuri-MacBookPro
 
 * Headers
-#+begin_src  C :tangle main.c
+#+begin_src  C :tangle (eval c) :main no
 #include <stdio.h>
 #include <mpi.h>
 #include <sys/time.h>
@@ -14,7 +14,7 @@ int main(int argc, char *argv[])
 #+end_src
 
 * Initialize MPI
-#+begin_src  C :tangle main.c
+#+begin_src  C :tangle (eval c) :main no
 int rank, size;
 MPI_Status status;
 
@@ -28,7 +28,7 @@ MPI_Comm_size(MPI_COMM_WORLD, &size);
 * Probing for messages
 
 ** Slaves send messages
-#+begin_src  C :tangle main.c
+#+begin_src  C :tangle (eval c) :main no
 if (rank != 0) { // Slaves
     int buf;
 
@@ -50,8 +50,7 @@ if (rank != 0) { // Slaves
     }
 #+end_src
 ** Then wait to receive reply from master
-#+begin_src  C :tangle main.c
-
+#+begin_src  C :tangle (eval c) :main no
     int sum = 0;
     int flag = -1, res;
     MPI_Request request;
@@ -81,7 +80,7 @@ if (rank != 0) { // Slaves
 }
 #+end_src
 ** Master probes for messages and receives
-#+begin_src  C :tangle main.c
+#+begin_src  C :tangle (eval c) :main no
 else { // Master
     int sum = 0;
     int flag = -1, res;
@@ -109,7 +108,7 @@ else { // Master
     }
 #+end_src
 ** Master sends reply to slaves
-#+begin_src  C :tangle main.c
+#+begin_src  C :tangle (eval c) :main no
     int buf;
     buf=0;
     MPI_Send(&buf, 1, MPI_INT, 1, 0, MPI_COMM_WORLD);
@@ -119,7 +118,7 @@ else { // Master
 }
 #+end_src
 * End
-#+begin_src  C :tangle main.c
+#+begin_src  C :tangle (eval c) :main no
 
 MPI_Finalize();
 return 0;
