--- a/org/main.org
+++ b/org/main.org
@@ -1,10 +1,12 @@
 #+title:     MPI examples
 #+author:    vijay gopal chilkuri
 #+email:     chilkuri@chilkuri-MacBookPro
+#+startup: showall
 
 * Headers
 #+begin_src  C :tangle (eval c) :main no
 #include <stdio.h>
+#include <unistd.h>
 #include <mpi.h>
 #include <sys/time.h>
 
@@ -53,6 +55,7 @@ if (rank != 0) { // Slaves
 #+begin_src  C :tangle (eval c) :main no
     int sum = 0;
     int flag = -1, res;
+    int work = 0;
     MPI_Request request;
     MPI_Status status;
     while (1) {
@@ -62,21 +65,27 @@ if (rank != 0) { // Slaves
             flag = 0;
         }
 
-        MPI_Test(&request, &flag, &status);
+        //if (work > 3){
+          MPI_Test(&request, &flag, &status);
+        //}
 
         if (flag != 0) {
-            printf("recv : %d, slave : %d\n", res, status.MPI_SOURCE);
             if (status.MPI_SOURCE != -1)
                 sum += res;
+            printf("recv : %d, master : %d sum=%d\n", res, status.MPI_SOURCE,sum);
             flag = -1;
         }
 
+        work++;
 
-        if (sum == 0)
+        if (sum == 1)
             break;
     }
+    sleep(2.0);
 
-    printf("rank = %d sum : %d\n", rank, sum);
+    //MPI_Send(&work, 1, MPI_INT, 0, 0, MPI_COMM_WORLD);
+
+    printf("done rank = %d sum : %d work = %d\n", rank, sum, work);
 }
 #+end_src
 ** Master probes for messages and receives
@@ -96,24 +105,31 @@ else { // Master
         MPI_Test(&request, &flag, &status);
 
         if (flag != 0) {
-            printf("recv : %d, slave : %d\n", res, status.MPI_SOURCE);
             if (status.MPI_SOURCE != -1)
                 sum += res;
             flag = -1;
+            printf("recv : %d, slave : %d sum = %d\n", res, status.MPI_SOURCE,sum);
         }
 
 
         if (sum == 6)
             break;
     }
+    //sleep(4.0);
 #+end_src
 ** Master sends reply to slaves
 #+begin_src  C :tangle (eval c) :main no
     int buf;
-    buf=0;
+    buf=1;
     MPI_Send(&buf, 1, MPI_INT, 1, 0, MPI_COMM_WORLD);
-    buf=0;
+    buf=1;
     MPI_Send(&buf, 1, MPI_INT, 2, 0, MPI_COMM_WORLD);
+    
+    //MPI_Recv(&buf, 1, MPI_INT, 1, 0, MPI_COMM_WORLD, &status);
+    //printf("res from 1 : %d\n", buf);
+    //MPI_Recv(&buf, 1, MPI_INT, 2, 0, MPI_COMM_WORLD, &status);
+    //printf("res from 2 : %d\n", buf);
+
     printf("sum : %d\n", sum);
 }
 #+end_src
