--- a/org/main.org
+++ b/org/main.org
@@ -65,9 +65,7 @@ if (rank != 0) { // Slaves
             flag = 0;
         }
 
-        //if (work > 3){
-          MPI_Test(&request, &flag, &status);
-        //}
+        MPI_Test(&request, &flag, &status);
 
         if (flag != 0) {
             if (status.MPI_SOURCE != -1)
@@ -83,7 +81,7 @@ if (rank != 0) { // Slaves
     }
     sleep(2.0);
 
-    //MPI_Send(&work, 1, MPI_INT, 0, 0, MPI_COMM_WORLD);
+    MPI_Send(&work, 1, MPI_INT, 0, 0, MPI_COMM_WORLD);
 
     printf("done rank = %d sum : %d work = %d\n", rank, sum, work);
 }
@@ -125,10 +123,10 @@ else { // Master
     buf=1;
     MPI_Send(&buf, 1, MPI_INT, 2, 0, MPI_COMM_WORLD);
     
-    //MPI_Recv(&buf, 1, MPI_INT, 1, 0, MPI_COMM_WORLD, &status);
-    //printf("res from 1 : %d\n", buf);
-    //MPI_Recv(&buf, 1, MPI_INT, 2, 0, MPI_COMM_WORLD, &status);
-    //printf("res from 2 : %d\n", buf);
+    MPI_Recv(&buf, 1, MPI_INT, 1, 0, MPI_COMM_WORLD, &status);
+    printf("res from 1 : %d\n", buf);
+    MPI_Recv(&buf, 1, MPI_INT, 2, 0, MPI_COMM_WORLD, &status);
+    printf("res from 2 : %d\n", buf);
 
     printf("sum : %d\n", sum);
 }
