working on calculate pi.

--- a/org/main.org
+++ b/org/main.org
@@ -6,9 +6,13 @@
 * Headers
 #+begin_src  C :tangle (eval c) :main no
 #include <stdio.h>
+#include <stdlib.h>
 #include <unistd.h>
+#include <time.h>
 #include <mpi.h>
 #include <sys/time.h>
+
+#include "calculate_func.h"
 
 int main(int argc, char *argv[])
 {
@@ -29,33 +33,19 @@ MPI_Comm_size(MPI_COMM_WORLD, &size);
 
 * Probing for messages
 
-** Slaves send messages
+** Initialize random number generator
 #+begin_src  C :tangle (eval c) :main no
 if (rank != 0) { // Slaves
     int buf;
+    srand(time(NULL) + rank);
 
-    if (rank == 1) {
-        buf = 1;
-        MPI_Send(&buf, 1, MPI_INT, 0, 0, MPI_COMM_WORLD);
-    }
-    if (rank == 1) {
-        buf = 1;
-        MPI_Send(&buf, 1, MPI_INT, 0, 0, MPI_COMM_WORLD);
-    }
-    if (rank == 2) {
-        buf = 2;
-        MPI_Send(&buf, 1, MPI_INT, 0, 0, MPI_COMM_WORLD);
-    }
-    if (rank == 2) {
-        buf = 2;
-        MPI_Send(&buf, 1, MPI_INT, 0, 0, MPI_COMM_WORLD);
-    }
 #+end_src
-** Then wait to receive reply from master
+** Calculate and keep sending intermediate values
 #+begin_src  C :tangle (eval c) :main no
     int sum = 0;
     int flag = -1, res;
-    int work = 0;
+    int work = 0, nSteps=1000;
+    double meanPI, varPI;
     MPI_Request request;
     MPI_Status status;
     while (1) {
@@ -74,16 +64,16 @@ if (rank != 0) { // Slaves
             flag = -1;
         }
 
-        work++;
+        mcstepPI(nSteps, &meanPI, &varPI);
 
         if (sum == 1)
             break;
     }
     sleep(2.0);
 
-    MPI_Send(&work, 1, MPI_INT, 0, 0, MPI_COMM_WORLD);
+    MPI_Send(&meanPI, 1, MPI_DOUBLE, 0, 0, MPI_COMM_WORLD);
 
-    printf("done rank = %d sum : %d work = %d\n", rank, sum, work);
+    printf("done rank = %d sum : %d work = %d meanPI=%10.5f varPI=%10.5f\n", rank, sum, work, meanPI, varPI);
 }
 #+end_src
 ** Master probes for messages and receives
