--- a/org/main.org
+++ b/org/main.org
@@ -39,7 +39,7 @@ MPI_Comm_size(MPI_COMM_WORLD, &size);
 #+begin_src  C :tangle (eval c) :main no
 if (rank != 0) { // Slaves
     int buf;
-    srand(time(NULL) + rank);
+    srand( rank);
 
 #+end_src
 ** Calculate and keep sending intermediate values
@@ -47,7 +47,7 @@ if (rank != 0) { // Slaves
     int sum = 0;
     int flag = -1, res;
     int stop=-1;
-    int work = 0, nSteps=20000;
+    int work = 0, nSteps=50000;
     double sumPI, sumPI2;
     double data[4];
     MPI_Request request;
@@ -68,7 +68,6 @@ if (rank != 0) { // Slaves
         if (flag != 0) {
             if (statusstop.MPI_SOURCE != -1)
                 sum += 1;
-            //printf("received stop = %d sum = %d\n",stop,sum);
             flag = 0;
         }
 
@@ -87,13 +86,6 @@ if (rank != 0) { // Slaves
         sum++;
 
     }
-    //sleep(2.0);
-
-    //data[0] = sumPI;
-    //data[1] = sumPI2;
-    //MPI_Send(data, 2, MPI_DOUBLE, 0, 0, MPI_COMM_WORLD);
-
-    //printf("done rank = %d sum : %d work = %d sumPI=%10.5f sumPI2=%10.5f\n", rank, sum, work, data[1], data[2]);
 }
 #+end_src
 ** Master receives and checks for halting
@@ -123,19 +115,15 @@ else { // Master
         if (flag != 0) {
             if (status.MPI_SOURCE != -1)
                 sum += data[0];
-            //printf("recv : %10.5f, master : %d sum=%10.5f\n", data[0], status.MPI_SOURCE,sum);
             flag = -1;
             sumPItot  += data[1];
             sumPI2tot += data[2];
             nStepstot += data[3];
-            //printf("sum : %10.5f %10.5f mean=%10.5f\n", data[1], data[0], sumPItot/nStepstot);
             errorPI = M_PI/4 - sumPItot/nStepstot;
             varPI = (sumPI2tot - (sumPItot * sumPItot/nStepstot))/(nStepstot-1);
-            printf("%10.9f (Error=%10.9f) Var=%10.9f\n", sumPItot/nStepstot, errorPI, varPI);
         }
 
-        //if (abs(sum - 3 * 13.0) < 1e-10){
-        if (fabs(errorPI) < 0.000001){
+        if (fabs(errorPI) < 0.00000001){
           for( i=1; i < size; ++i) {
             buf = 1;
             MPI_Send(&buf, 1, MPI_INT, i, 0, MPI_COMM_WORLD);
@@ -144,7 +132,7 @@ else { // Master
         }
     }
 
-    //printf("final sum : %10.5f %10.5f\n", data[1], data[0]);
+    printf("%10.9f (Error=%10.9f) Var=%10.9f\n", sumPItot/nStepstot, errorPI, varPI);
 }
 #+end_src
 * End
