Fixed step size.

--- a/org/main.org
+++ b/org/main.org
@@ -55,6 +55,8 @@ if (rank != 0) { // Slaves
     MPI_Status status;
     MPI_Status statusstop;
 
+    MPI_Recv(&nSteps, 1, MPI_INT, 0, 10, MPI_COMM_WORLD, &status);
+
     while (1) {
 
         if(flag != 0)
@@ -102,6 +104,12 @@ else { // Master
     double nStepstot = 0.0;
     double errorPI = 10.0;
     double varPI   = 10.0;
+    
+    int nSteps = 50000;
+    for( i=1; i < size; ++i) {
+      MPI_Send(&nSteps, 1, MPI_INT, i, 10, MPI_COMM_WORLD);
+    }
+
     nmax = 12;
     while (1) {
         if(flag != 0)
