Added input params.

--- a/org/main.org
+++ b/org/main.org
@@ -123,6 +123,7 @@ else { // Master
     int startidx[size-1];
     int nItermax=  0;
     nItermax = 10000;
+    nItermax = atoi(argv[1]);
     nItermax = nItermax - (nItermax % (size * (size-1)/2));
     nItermax = nItermax - nItermax % (size-1);
     printf("Nitermax = %d size=%d\n",nItermax,M_WINDOW * (size-1));
